# gaspars-file-organizer

./: .gitignore  README.md  publish.yml  pyproject.toml
arquivos/: Arquivo.py  Organizar.py  main.py  pyproject.toml
